very very basic change

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,13 +10,26 @@ set -s escape-time 0                      # fastest command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s quiet on                           # disable various messages
 
-set -g prefix2 C-a                        # GNU-Screen compatible prefix
-bind C-a send-prefix -2
+############################################################################
+# set -g prefix2 C-a                        # GNU-Screen compatible prefix #
+# bind C-a send-prefix -2                                                  #
+############################################################################
+# remap prefix to Control + q
+set -g prefix C-q
+# bind 'C-a C-a' to type 'C-a'
+bind C-q send-prefix
+unbind C-b
 
 set -g history-limit 5000                 # boost history
 
-# edit configuration
-bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
+###############################################################################################################################################################
+# # edit configuration                                                                                                                                        #
+# bind e new-window -n '~/.tmux.conf.local' "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'" #
+###############################################################################################################################################################
+
+# Emacs start up
+bind E new-window -n EMACS "emacs -nw"
+bind e splitw -v -p 50 "emacs -nw"
 
 # reload configuration
 bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
